<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:paddingTop="10dp"
        >

        <EditText
            android:id="@+id/data_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:enabled="true"
            android:hint="0"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxLines="8"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|normal"
/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="@color/red"
            android:layout_marginBottom="6dp" />
        <TextView
            android:id="@+id/result_tv"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold|normal"
            android:background="#00000000"
            android:maxLines="2"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            />
    </LinearLayout>


        <TableLayout
            android:id="@+id/table_layout"
            android:gravity="center_vertical"
            android:layout_marginBottom="1dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:paddingBottom="2dp"
            >

            <TableRow style="@style/simple_row">

                <Button
                    android:id="@+id/button_pi"
                    android:text="@string/piText"
                    android:onClick="piBtn"
                    style="@style/fun_button"/>

                <Button
                    android:id="@+id/button_all_clear"
                    android:text="@string/clearText"
                    android:onClick="clearBtn"
                    style="@style/fun_button"/>

                <Button
                    android:id="@+id/button_open"
                    android:text="@string/parenthesesOpenText"
                    android:onClick="openBracketBtn"
                    style="@style/simple_button"
                    />

                <Button
                    android:id="@+id/button_close"
                    android:text="@string/parenthesesCloseText"
                    android:onClick="closeBracketBtn"
                    style="@style/simple_button"/>

                <Button
                    android:id="@+id/btn_clear"
                    android:text="C"
                    android:onClick="clearBtn"
                    style="@style/simple_button"/>

            </TableRow>

            <TableRow
                style="@style/simple_row">

                <Button
                    android:id="@+id/btn_sin"
                    android:onClick="sinBtn"
                    android:text="@string/trigSinText"
                    style="@style/fun_button"/>

                <Button
                    android:id="@+id/button7"
                    android:text="@string/sevenText"
                    android:onClick="numberBtn"
                    style="@style/simple_button"/>

                <Button
                    android:id="@+id/btn001"
                    android:text="@string/eightText"
                    android:onClick="numberBtn"
                    style="@style/simple_button"/>

                <Button
                    android:id="@+id/btn003"
                    android:text="@string/nineText"
                    android:onClick="numberBtn"
                    style="@style/simple_button"/>

                <Button
                    android:id="@+id/btnDivide"
                    android:text="@string/divideText"
                    android:onClick="divideBtn"
                    style="@style/simple_button"/>

            </TableRow>

            <TableRow style="@style/simple_row">

                <Button
                    android:id="@+id/btn_cos"
                    android:text="@string/trigCosText"
                    android:onClick="cosBtn"
                    style="@style/fun_button"/>

                <Button
                    android:id="@+id/btn012"
                    android:text="@string/fourText"
                    android:onClick="numberBtn"
                    style="@style/simple_button"/>

                <Button
                    android:id="@+id/btn0011"
                    android:text="@string/fiveText"
                    android:onClick="numberBtn"
                    style="@style/simple_button"/>

                <Button
                    android:id="@+id/button6"
                    android:text="@string/sixText"
                    android:onClick="numberBtn"
                    style="@style/simple_button"/>

                <Button
                    android:id="@+id/btnAdd"
                    android:text="@string/multiplyText"
                    android:onClick="multiplyBtn"
                    style="@style/simple_button"/>

            </TableRow>

            <TableRow style="@style/simple_row">

                <Button
                    android:id="@+id/btn_ln"
                    android:text="@string/naturalLogText"
                    android:onClick="naturalLogBtn"
                    style="@style/fun_button"/>

                <Button
                    android:id="@+id/btn032"
                    android:text="@string/oneText"
                    android:onClick="numberBtn"
                    style="@style/simple_button"/>

                <Button
                    android:id="@+id/btn021"
                    android:text="@string/twoText"
                    android:onClick="numberBtn"
                    style="@style/simple_button"/>

                <Button
                    android:id="@+id/btn031"
                    android:text="@string/threeText"
                    android:onClick="numberBtn"
                    style="@style/simple_button"/>

                <Button
                    android:id="@+id/btnDivides"
                    android:text="@string/subtractText"
                    android:onClick="subtractBtn"
                    style="@style/simple_button"/>
            </TableRow>

            <TableRow style="@style/simple_row">

                <Button
                    android:id="@+id/btn_pow"
                    android:text="@string/xPowerYText"
                    android:onClick="xPowYBtn"
                    style="@style/fun_button"/>
                <Button
                    android:id="@+id/btn036"
                    android:onClick="decimialBtn"
                    android:text="@string/decimalText"
                    style="@style/simple_button"/>

                <Button
                    android:id="@+id/btn025"
                    android:text="@string/zeroText"
                    android:onClick="numberBtn"
                    style="@style/simple_button"/>

                <Button
                    android:id="@+id/btnDiv"
                    android:text="@string/equalsText"
                    android:onClick="equalBtn"
                    style="@style/simple_button" />

                <Button
                    android:id="@+id/btnDividess"
                    android:text="@string/addText"
                    android:onClick="addBtn"
                    style="@style/simple_button"/>
            </TableRow>

        </TableLayout>



</LinearLayout>